--- a/package.json
+++ b/package.json
@@ -15,13 +15,14 @@
     "src/styles/*"
   ],
   "scripts": {
+    "inspect": "vue-cli-service inspect",
     "dev": "vue-cli-service serve",
     "build": "vue-cli-service build",
     "lint": "vue-cli-service lint",
-    "storybook": "start-storybook -p 6006",
-    "build-storybook": "build-storybook",
+    "sb": "start-storybook -p 6006",
+    "build:sb": "build-storybook",
     "format": "prettier --write .",
-    "create:lib": "rm -rf dist && vue-cli-service build --no-clean --target lib --name watson-vue src/main.js",
+    "create:lib": "rm -rf dist && vue-cli-service build --no-clean --target lib --name watson-vue src/main-lib.js",
     "release:patch": "yarn version --patch && yarn create:lib && yarn publish --access public --non-interactive --registry=https://registry.npmjs.org/"
   },
   "sideEffects": true,
@@ -30,10 +31,15 @@
     "vue": "^2.6.11"
   },
   "devDependencies": {
-    "@babel/core": "^7.17.4",
+    "@babel/core": "^7.17.5",
+    "@babel/plugin-proposal-private-property-in-object": "^7.16.7",
+    "@babel/plugin-proposal-class-properties": "^7.16.7",
+    "@babel/plugin-proposal-private-methods": "^7.16.11",
     "@storybook/addon-actions": "^6.4.19",
     "@storybook/addon-essentials": "^6.4.19",
     "@storybook/addon-links": "^6.4.19",
+    "@storybook/addon-postcss": "^2.0.0",
+    "@storybook/preset-scss": "^1.0.3",
     "@storybook/vue": "^6.4.19",
     "@vue/cli-plugin-babel": "~4.5.15",
     "@vue/cli-plugin-eslint": "~4.5.15",
@@ -48,6 +54,7 @@
     "prettier": "^2.5.1",
     "sass": "^1.49.8",
     "sass-loader": "^10",
+    "storybook-addon-sass-postcss": "^0.1.0",
     "vue": "^2.6.11",
     "vue-loader": "^15.9.8",
     "vue-template-compiler": "^2.6.14"
