--- a/package.json
+++ b/package.json
@@ -16,10 +16,9 @@
   ],
   "scripts": {
     "inspect": "vue-cli-service inspect",
-    "dev": "vue-cli-service serve",
     "build": "vue-cli-service build",
     "lint": "vue-cli-service lint",
-    "sb": "start-storybook -p 6006",
+    "dev": "start-storybook -p 6006",
     "build:sb": "build-storybook",
     "format": "prettier --write .",
     "create:lib": "rm -rf dist && vue-cli-service build --no-clean --target lib --name watson-vue src/install.js",
