--- a/package.json
+++ b/package.json
@@ -40,6 +40,8 @@
     "@storybook/addon-postcss": "^2.0.0",
     "@storybook/preset-scss": "^1.0.3",
     "@storybook/vue": "^6.4.19",
+    "@storybook/addon-a11y": "^6.4.19",
+    "storybook-addon-designs": "^6.2.1",
     "@vue/cli-plugin-babel": "~4.5.15",
     "@vue/cli-plugin-eslint": "~4.5.15",
     "@vue/cli-service": "~4.5.15",
